# vizbee

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  run-pyvizbee.sh
.github/workflows/: routine-tests.yml
pyvizbee/: __init__.py  __main__.py  add_path.py  align_df_sliced.py  align_ns_df.py  align_sents.py  amend_avec.py  button_cb_save_tsv.py  button_cb_show_nsdf.py  cb_save_tsv.py  cb_save_xlsx.py  cb_sent_align.py  cb_show_nsdf.py  color_map.py  display_text_widget.py-  filevalue2list.py  gen_df.py  gen_pairs.py  load_text_widget.py-  loadtext.py  locate_index_pairs.py  loglevel.py  model_test_zh.lzma  not_docked_indices.py  ns.py  seg_text_fix.py  sent_align_df_sliced.py  sent_align_ns_df.py  template.py  template.py-
tests/: ns_df.py  test_align_df_sliced.py  test_align_ns_df.py  test_align_sents.py  test_amend_avec.py  test_cmat2aset.py  test_locate_index_pairs.py  test_not_docked_indices.py  test_seg_text.py  test_seg_text_fix.py  test_sent_align_df_sliced.py  test_sent_align_ns_df.py  test_version.py
