[tool.poetry]
name = "pyvizbee"
version = "0.1.0a1"
description = "a dualtext alingner based on holoviz panel"
authors = ["ffreemt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.7.0"
loguru = "^0.6.0"
panel = "^0.12.6"
param = "^1.12.0"
bokeh = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pylint = "^2.12.2"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
