[tool.poetry]
name = "pyvizbee"
version = "0.1.0-alpha.4"
description = "a dualtext alingner based on holoviz panel"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/vizbee"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8.3"
loguru = "^0.6.0"
panel = "^0.12.6"
param = "^1.12.0"
bokeh = "^2.4.2"
icecream = "^2.1.2"
pandas = "^1.4.1"
cchardet = "^2.1.7"
logzero = "^1.7.0"
environs = "^9.5.0"
numpy = "^1.22.3"
unsync = "^1.4.0"
holoviews = { version = "^1.14.8", optional = true }
plotly = { version = "^5.6.0", optional = true }
seaborn = { version = "^0.11.2", optional = true }
cmat2aset = "0.1.0a7"
fast-scores = "0.1.3a4"
nltk = "^3.7"
seg-text = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pylint = "^2.12.2"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
pip-chill = "^1.0.1"

[tool.poetry.extras]
plot = ["holoviews", "plotly", "seaborn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
